urpc/internal/core/analysis/testdata/errors/structure/duplicate_field_in_type.ufo
// @expect: E703

type User {
	id: string
	name: string
	id: int
}
